--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,4 @@
 <div class="bg-indigo-400 p-10 rounded-lg shadow-lg max-w-lg mx-auto text-white text-center mt-32">
-    <h1 class="font-black text-6xl text-center">Tailwind 2.0!</h1>
-    <p class="text-lg leading-tight mt-4 font-light">Cool</p>
+    <h1 class="font-black text-6xl text-center">Welcome!</h1>
+    <p class="text-lg leading-tight mt-4 font-light">Webbit</p>
 </div>
-<%= render_svg('icons/edit', styles: "fill-current text-purple-500 w-4 h-4") %>
