--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -13,15 +13,11 @@
   <%= @submission.url %>
 </p>
 
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @submission.submission_image.large.url, width: 400 %>
-</p>
+<strong>Image:</strong>
+<%= image_tag @submission.submission_image.large.url, width: 400 if @submission.submission_image.present? %>
 
-<p>
-  <strong>Video:</strong>
-  <%# @submission.submission_video %>
-</p>
+<strong>Video:</strong>
+<%# @submission.submission_video %>
 
 <%= link_to 'Edit', edit_submission_path(@submission) %> |
 <%= link_to 'Back', submissions_path %>
