--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,4 +2,11 @@
 
 @tailwind components;
 
+@import "components/animate";
+@import "components/base";
+@import "components/icons";
+@import "components/forms";
+@import "components/buttons";
+@import "components/cards";
+
 @tailwind utilities;
