--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,14 +1,14 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
-    <h2>
+  <div id="error_explanation" class="border-red-400 p-4 rounded border mb-6 bg-red-100">
+    <h2 class="text-sm heading text-red-500 font-bold">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul>
+    <ul class="text-sm mt-2 text-red-500 pl-4 font-semibold">
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <li class="list-disc"><%= message %></li>
       <% end %>
     </ul>
   </div>
