--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,31 +1,19 @@
-<h1>Submissions</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Url</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @submissions.each do |submission| %>
-      <tr>
-        <td><%= submission.title %></td>
-        <td><%= submission.body %></td>
-        <td><%= submission.url %></td>
-        <td><%= submission.submission_image %></td>
-        <td><%= link_to 'Show', submission %></td>
-        <td><%= link_to 'Edit', edit_submission_path(submission) %></td>
-        <td><%= link_to 'Destroy', submission, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<% content_for :primary_content do %>
+    <% if @submissions.exists? %>
+      <%= render @submissions %>
+    <% else %>
+      <div class="p-10 text-center">
+        <div class="inline-block">
+          <%= render_svg "icons/empty" %>
+        </div>
+        <p class="mb-4">Wow such empty...</p>
+        <%= link_to "Create a new submission", new_submission_path, class: "btn btn-purple btn-small" %>
+      </div>
     <% end %>
-  </tbody>
-</table>
+<% end %>
 
-<br>
+<% content_for :secondary_content do %>
+  <%= link_to 'New Submission', new_submission_path %>
+<% end %>
 
-<%= link_to 'New Submission', new_submission_path %>
+<%= render "basic_layout" %>
