Module 5: Extending submissions UI + Submissions Javascript

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,5 +8,6 @@
 @import "components/forms";
 @import "components/buttons";
 @import "components/cards";
+@import "components/tabs";
 
 @tailwind utilities;
