--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <hr class="border border-gray-400 my-4" />
+  <hr class="border border-gray-200 my-4" />
 
   <div class="pb-10">
     <nav class="border-box">
@@ -57,7 +57,7 @@
   </div>
 
   <div class="mb-6 text">
-    <%= form.label "Text", class: "label" %>
+    <%= form.label "Body", class: "label" %>
     <%= form.text_area :body, class: "input" %>
   </div>
 
