Add communities & submissions javascript

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,5 +9,6 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/tabs";
+@import "components/navigation";
 
 @tailwind utilities;
