--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,11 +4,13 @@
 
 @import "components/animate";
 @import "components/base";
-@import "components/icons";
-@import "components/forms";
 @import "components/buttons";
 @import "components/cards";
-@import "components/tabs";
+@import "components/forms";
+@import "components/icons";
+@import "components/modal";
 @import "components/navigation";
+@import "components/submissions";
+@import "components/tabs";
 
 @tailwind utilities;
