--- a/app/javascript/stylesheets/components/navigation.scss
+++ b/app/javascript/stylesheets/components/navigation.scss
@@ -1,14 +1,32 @@
 .dropdown {
   position: relative;
-  min-width: 220px;
+  min-width: 180px;
   z-index: 2;
 
-  .dropdown-list {
-    background: white;
+  .dropdown-target {
+    border: 1px solid transparent;
+
+    &:hover {
+      border: 1px solid #dae1e7;
+    }
+  }
+
+  &.dropdown-user-account {
     min-width: 220px;
-    top: 34px;
-    left: -1px;
+  }
+
+  .dropdown-menu {
+    background: white;
+    top: 37px;
+    left: 0;
     z-index: 1;
+    width: 100%;
+    position: absolute;
+
+    &.dropdown-menu-right {
+      right: 0;
+      left: auto;
+    }
 
     a:hover {
       svg {
@@ -16,6 +34,10 @@
       }
     }
 
+    li:last-of-type a {
+      border-bottom-right-radius: .25rem;
+      border-bottom-left-radius: .25rem;
+    }
 
   }
 }
