--- a/app/views/submissions/edit.html.erb
+++ b/app/views/submissions/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :community_label, "Edit Submission" %>
+
 <% content_for :primary_content do %>
 
  <div class="lg:p-10 pt-10 pb-10 px-4">
