--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,7 +1,9 @@
+<% content_for :community_label, "Create Submission" %>
+
 <% content_for :primary_content do %>
 
   <div class="lg:p-10 pt-10 pb-10 px-4">
-    <h1 class="text-xl font-normal mb-6">New Submission</h1>
+    <h1 class="text-xl font-normal mb-6">Create a Submission</h1>
     <%= render 'form', submission: @submission %>
   </div>
  
@@ -10,7 +12,7 @@
 <% content_for :secondary_content do %>
   <div class="px-8 pt-6 pb-8">
     <div class="text-center my-4">
-      <%#= image_tag "image.svg", class: "max-w-full w-1/2" %>
+      <%= render_svg "submission", styles: "max-w-full h-auto mb-4" %>
     </div>
     <%= render "guidelines" %>
   </div>
