--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,23 +1,53 @@
-<p>
-  <strong>Title:</strong>
-  <%= @submission.title %>
-</p>
+<% content_for :community_label, @submission.title %>
 
-<p>
-  <strong>Body:</strong>
-  <%= @submission.body %>
-</p>
+<%= render "communities/community_header", community: @submission.community %>
 
-<p>
-  <strong>Url:</strong>
-  <%= @submission.url %>
-</p>
+<% content_for :primary_content do %>
+  <div class="p-4 pb-6 pr-6">
+    <div class="flex flex-row flex-wrap items-start justify-between">
+      <div class="submission-voting text-xs pr-2">
+        <%= render "voting" %>
+      </div>
 
-<strong>Image:</strong>
-<%= image_tag @submission.submission_image.large.url, width: 400 if @submission.submission_image.present? %>
+      <div class="submission-content">
+        <%= render "posted_by", submission: @submission %>
 
-<strong>Video:</strong>
-<%# @submission.submission_video %>
+        <h1 class="text-xl font-bold"><%= @submission.title %></h1>
 
-<%= link_to 'Edit', edit_submission_path(@submission) %> |
-<%= link_to 'Back', submissions_path %>
+        <div class="leading-normal text-base lg:pr-6 mb-5">
+          <%= @submission.body %>
+        </div>
+
+        <%= render "actions", submission: @submission %>
+
+        <% unless user_signed_in? %>
+          <p class="text-sm text-gray-600 my-2"><%= link_to "Login", new_user_session_path, class: "link" %> or <%= link_to "Sign up", new_user_registration_path, class: "link" %> to comment.</p>
+        <% else %>
+          <%= render "comments/form" %>
+        <% end %>
+
+        <div id="comments" class="mt-6 border-t border-gray-200">
+          <%= render @submission.comments %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+
+<% content_for :secondary_content do %>
+  <%= render "communities/sidebar", community: @submission.community %>
+<% end %>
+
+<%= render "basic_layout" %>
+
+<div id="edit-comment">
+  <div class="modal">
+    <div class="max-w-xl m-auto mt-5 bg-white p-10 pt-4 relative rounded-lg shadow-lg">
+      <button class="js-close-modal absolute top-0 right-0 mr-4 mt-4">
+        <%= render_svg "icons/close", title: "Close", styles: "icon-md fill-current text-gray-500" %>
+      </button>
+      <div class="modal-inner">
+      </div>
+    </div>
+  </div>
+</div>
